<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="500dp"
        android:layout_height="250dp"
        android:src="@drawable/_bg__authentication_ek2_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/some_cat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/inter"
        android:text="@string/choose_your_english_level"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/eng_words_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintVertical_bias="0.811">

        <Button
            android:id="@+id/beginner"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/item_green"
            android:fontFamily="@font/inter"
            android:text="@string/beginner"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <Button
            android:id="@+id/advanced"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/item_red"
            android:fontFamily="@font/inter"
            android:text="@string/advanced"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/intermediate"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/item_blue"
        android:fontFamily="@font/inter"
        android:text="@string/intermediate"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/eng_words_layout"
        app:layout_constraintEnd_toEndOf="@+id/eng_words_layout"
        app:layout_constraintStart_toStartOf="@+id/eng_words_layout" />

    <Button
        android:id="@+id/back_to_home"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>